<resources>
    <string name="app_name">findaway_client_library</string>

    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="download">Download</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="resume">Resume</string>

    <string name="chapterPercentage">Chapter %d%%</string>
    <string name="contentPercentage">Total %d%%</string>

    <string name="downloadStarted">Downloading Your Audiobook.</string>
    <string name="downloadPaused">Download paused.</string>
    <string name="downloadCancelled">Download cancelled.</string>
    <string name="downloadComplete">Download complete.</string>
    <string name="deleteComplete">Delete complete.</string>

    <string name="chapterDownloaded">%s downloaded.</string>

    <string name="action_favorite">brighten theme</string>
    <string name="action_rewind_interval">Number of Seconds to Rewind</string>
    <string name="action_sleep_timer">Sleep Timer</string>
    <string name="action_settings">Settings</string>
    <string name="action_table_of_contents">Table of Contents</string>
    <string name="action_theme_selector">Select Dark or Light Visual Theme</string>
    <string name="author_name_view">author name view</string>

    <string name="book_cover_image_view">book cover image view</string>
    <string name="book_title_view">book title view</string>

    <string name="cannot_load_image_file">Cannot load image file</string>

    <string name="fast_forward_button">fast forward button</string>

    <string name="logtag_cover_image">logtag_cover_image</string>

    <string name="narrator_name_view">narrator name view</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="pause_playback">Pause playback</string>
    <string name="pause_playback_button">play pause button</string>

    <string name="rewind_button">rewind button</string>

    <string name="seek_bar_control">within chapter seek bar</string>
    <string name="skip_to_next_chapter_button">skip to next chapter button</string>
    <string name="skip_to_prev_chapter_button">rewind to previous chapter button</string>

    <string name="title_activity_playbook">Play Audio Book</string>
    <string name="deleteAllContentComplete">All content deleted for this book.</string>
    <string name="pause_download">Pause Download</string>
</resources>
