<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- timer and other buttons, should appear as action buttons, not in overflow, whenever possible -->
    <item
        android:id="@+id/action_sleep_timer"
        android:icon="@drawable/timer_dark"
        android:title="@string/action_sleep_timer"
        app:showAsAction="always"/>

    <!-- item
        android:id="@+id/action_theme_selector"
        android:icon="@drawable/moon_dark"
        android:title="@string/action_theme_selector"
        app:showAsAction="always"/ -->

    <item
        android:id="@+id/action_rewind_interval"
        android:icon="@drawable/ic_20_seconds"
        android:title="@string/action_rewind_interval"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_table_of_contents"
        android:icon="@drawable/toc_dark"
        android:title="@string/action_table_of_contents"
        app:showAsAction="always"/>

    <!-- NOTE:  Turning off/commenting out the overflow part of the toolbar, where things s.a. settings might go. -->
    <!-- item android:id="@+id/action_settings"
          android:orderInCategory="100"
          android:title="@string/action_settings"
          app:showAsAction="never"/ -->

</menu>