<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AppTheme_NoActionBar"
    tools:context="org.nypl.findawayclientlibrary.PlayBookActivity"
    >
    <!-- android:background="#044fab" -->

    <android.support.constraint.Guideline
        android:id="@+id/left_guideline_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10"/>

    <android.support.constraint.Guideline
        android:id="@+id/left_guideline_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20"/>

    <android.support.constraint.Guideline
        android:id="@+id/left_guideline_25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"/>

    <android.support.constraint.Guideline
        android:id="@+id/right_guideline_75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"/>

    <android.support.constraint.Guideline
        android:id="@+id/right_guideline_80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80"/>

    <android.support.constraint.Guideline
        android:id="@+id/right_guideline_90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90"/>

    <android.support.constraint.Guideline
        android:id="@+id/bottom_seekbar_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70"/>

    <android.support.constraint.Guideline
        android:id="@+id/bottom_buttons_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88"/>


    <View
        android:id="@+id/middle_info_area_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/default_cover_image_gradient_list"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_seekbar_guideline"
        app:layout_constraintTop_toBottomOf="@+id/book_narrator_full_name">
    </View>


    <!-- NOTE: Another option for ellipsize is marquee, to display name auto sliding from right to left. -->
    <TextView
        android:id="@+id/book_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:maxLines="2"
        android:paddingEnd="10sp"
        android:paddingStart="10sp"
        android:text="21: The Great Story"
        android:textColor="@color/textColorPrimary1"
        android:textSize="18sp"
        android:textStyle="bold"
        android:contentDescription="@string/book_title_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/book_author_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/author_name_view"
        android:ellipsize="end"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:maxLines="2"
        android:paddingEnd="10sp"
        android:paddingStart="10sp"
        android:text="Alice Author"
        android:textColor="@color/textColorPrimary1"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_title"/>

    <TextView
        android:id="@+id/book_narrator_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:maxLines="2"
        android:paddingEnd="10sp"
        android:paddingStart="10sp"
        android:text="Bob Narrator Jr."
        android:textColor="@color/textColorPrimary1"
        android:textSize="18sp"
        android:textStyle="normal"
        android:contentDescription="@string/narrator_name_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_author_full_name"/>

    <!-- Contains the book cover image. -->
    <ImageView
        android:id="@+id/cover_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/book_cover_image_view"
        android:minHeight="100dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@id/bottom_seekbar_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_narrator_full_name"
        app:layout_constraintVertical_bias="1.0"/>
        <!-- android:src="@drawable/toc_dark" -->

    <!-- TextView
        android:id="@+id/chapter_download_percentage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/download_progress"
        app:layout_constraintEnd_toStartOf="@+id/download_progress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"/>

    <TextView
        android:id="@+id/content_download_percentage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/download_progress"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/download_progress"/ -->


    <ProgressBar
        android:id="@+id/download_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:rotation="-90"
        android:indeterminate="false"
        android:max="100"
        app:layout_constraintTop_toTopOf="@+id/bottom_seekbar_guideline"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_seekbar_guideline"
        app:layout_constraintRight_toRightOf="@+id/right_guideline_90"
        app:layout_constraintLeft_toLeftOf="@+id/right_guideline_90"
        android:progressDrawable="@drawable/download_progress_bar_circular"/>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/download_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/pause_download"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="@+id/bottom_seekbar_guideline"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_seekbar_guideline"
        app:layout_constraintRight_toRightOf="@+id/right_guideline_90"
        app:layout_constraintLeft_toLeftOf="@+id/right_guideline_90"
        app:srcCompat="@drawable/ic_cloud_download_black_24dp"/>



    <!-- Playback positioning in audio file feedback goes in this section. -->

    <TextView
        android:id="@+id/current_playback_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="00:00:00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_seekbar_guideline"/>

    <TextView
        android:id="@+id/playback_time_remaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="32dp"
        android:text="00:00:00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_seekbar_guideline"/>


    <SeekBar
        android:id="@+id/playback_seek_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="217dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:secondaryProgressTint="@color/colorPrimaryDark"
        android:secondaryProgressTintMode="src_atop"

        app:layout_constraintEnd_toStartOf="@id/playback_time_remaining"
        app:layout_constraintStart_toEndOf="@id/current_playback_position"
        app:layout_constraintTop_toBottomOf="@id/bottom_seekbar_guideline"
        />



    <!-- Playback control buttons go in this section. -->

    <!-- ImageButton
        android:id="@+id/previous_track_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/skip_to_prev_chapter_button"
        app:srcCompat="@drawable/ic_skip_previous_black_24dp"
        app:layout_constraintRight_toLeftOf="@id/left_controls_guideline_1"
        app:layout_constraintTop_toBottomOf="@id/bottom_buttons_guideline"/ -->

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/rewind_button"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/rewind_button"
        android:focusable="true"
        android:scaleType="center"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintStart_toStartOf="@+id/left_guideline_10"
        app:layout_constraintTop_toBottomOf="@id/bottom_buttons_guideline"
        app:srcCompat="@drawable/ic_replay_10_black_24dp"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/play_pause_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:contentDescription="@string/pause_playback_button"
        android:focusable="true"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline_75"
        app:layout_constraintStart_toStartOf="@+id/left_guideline_25"
        app:layout_constraintTop_toBottomOf="@id/bottom_buttons_guideline"
        app:srcCompat="@drawable/ic_play_circle_outline_black_24dp"/>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/forward_button"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/fast_forward_button"
        android:focusable="true"
        android:scaleType="center"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline_90"
        app:layout_constraintTop_toBottomOf="@id/bottom_buttons_guideline"
        app:srcCompat="@drawable/ic_forward_10_black_24dp"/>

    <!-- ImageButton
        android:id="@+id/next_track_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/skip_to_next_chapter_button"
        app:srcCompat="@drawable/ic_skip_next_black_24dp"
        app:layout_constraintRight_toRightOf="@+id/right_controls_guideline_2"
        app:layout_constraintTop_toBottomOf="@id/bottom_buttons_guideline"/ -->


    <!--ToggleButton
        android:id="@+id/playback_speed_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="ToggleButton"
        android:textOff="x1"
        android:textOn="x2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"/-->

        <!--/LinearLayout-->
    <!--/LinearLayout--> <!-- bottom_nav_bar_media_controls -->

</android.support.constraint.ConstraintLayout>
